feat: list resources pagination (#100)
